# sembleexec

./: .gitignore  Makefile  README.md  build.py  entry_point.py  pyproject.toml  semble.spec  test_build.py
.github/workflows/: build.yml  check-release.yml
hooks/: hook-bm25s.py  hook-model2vec.py  hook-semble.py  hook-tree_sitter_language_pack.py  hook-vicinity.py
